configuracion de las entidades y cambio a ingles , se empieza a modelar la capa de aplicacion y se necesita hacer funcionar las migraciones

--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "MenuApi": {
+    "Api": {
       "commandName": "Project",
       "commandLineArgs": "ASPNETCORE_ENVIROMENT=Development",
       "launchBrowser": true,
