--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Dtos\Menu\Response\" />
     <Folder Include="Response\GenericResponses\" />
   </ItemGroup>
 
