--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,18 +11,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\Menu\Request\" />
-    <Folder Include="Dtos\Menu\Response\" />
-    <Folder Include="Response\GenericResponses\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 
 </Project>
